tests/sumo/spec/departure/errors/speed_given50/errors.sumo.meso
Error: Departure speed for vehicle '1' is too high for the departure edge 'beg'.
Quitting (on error).
